# jetson-edge-ai-security

./: .gitignore  Makefile  PORTFOLIO_DELIVERABLES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
deploy/thor/: Dockerfile  build_tensorrt_engines.py  edge-security.service  install.sh  operator-runbook.md  run_benchmark.py
docs/: architecture.md  claude-code-kickoff.md  datasets.md  edge-ids-implementation-brief.md  jetson-sniffer-upgrade-plan.md  production-roadmap.md  repo-metadata.md
docs/diagrams/: data-flow.mmd  deployment-view.mmd  runtime-flow.mmd  system-architecture.mmd
models/exports/: ar_forecaster.onnx  ar_forecaster.pkl  gbm_detector.onnx  gbm_detector.pkl
reports/: business-case.html  dashboard.html  index.html  tech-brief.html  thor_benchmark.json  training_run.json
reports/demo/: alerts.jsonl  replay_report.md  runtime_metrics.json
src/jetson_edge_ai_security/: cli.py
tests/: test_alerts_store.py  test_api_lookback_forecast.py  test_api_model_health.py  test_dataset_fetcher.py  test_detection_extras.py  test_edge_iiotset_loader.py  test_feature_windows.py  test_mock_models.py  test_models_interfaces.py  test_onnx_export_mock.py  test_pcap_replay.py  test_pipeline_smoke.py  test_reference_detector.py  test_reference_forecaster.py  test_reporting.py  test_stub_sources.py  test_temporal_binning.py  test_thor_smoke.py
tests/fixtures/: edge_iiotset_sample_5k.csv
web/: .env.local.example  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.css  App.tsx  index.css
web/src/lib/: api.ts  sse.ts
(+32 files in other folders)
