[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jetson-edge-ai-security"
version = "0.1.0"
description = "Production-oriented edge security telemetry runtime for defensive IDS replay, feature extraction, detection, and alerts."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
  "PyYAML>=6.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "onnx>=1.15",
  "onnxruntime>=1.17",
  "dpkt>=1.9",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "sse-starlette>=2.1",
  "aiosqlite>=0.20",
]

[project.optional-dependencies]
ml = [
  "scikit-learn>=1.4",
  "skl2onnx>=1.17",
  "torch>=2.0; extra == 'ml'",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.5",
  "mypy>=1.10",
  "scikit-learn>=1.4",
  "skl2onnx>=1.17",
  "types-PyYAML>=6.0",
]

[project.scripts]
edge-security = "jetson_edge_ai_security.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["jetson_edge_ai_security*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true

